Refactor, added tests